--- a/src/components/Card/Card.style.css
+++ b/src/components/Card/Card.style.css
@@ -19,3 +19,10 @@
   border: solid 1px #606060;
   background-color: #606060;
 }
+
+.save-icon {
+  width: 24px;
+  height: 22px;
+  background-color: #e7e3e4;
+  float: right;
+}
