--- a/src/components/Tab/Tab.style.css
+++ b/src/components/Tab/Tab.style.css
@@ -3,44 +3,49 @@
   height: auto;
   min-height: 400px;
   margin: 3.5rem auto 1.5rem;
-  padding: 2rem 1rem;
-  border-radius: 2rem;
-  @media (max-width: 769px) {
-    padding: 2rem 0;
-  }
 }
 
 ul.nav {
-  width: 60%;
-  margin: 0 auto 2rem;
-  display: flex;
+  width: 20%;
+  margin: auto;
   align-items: center;
-  justify-content: space-between;
-  border: 1px solid #39a2db;
-  border-radius: 2rem;
+  border-radius: 2px;
+  display: flex;
   padding-left: 0px;
   @media (max-width: 768px) {
     width: 90%;
   }
 }
 ul.nav li {
-  width: 50%;
-  padding: 1rem;
+  width: 98px;
+  height: 31px;
+  padding: 3px 39px 0 40px;
   list-style: none;
+  flex: 1;
   text-align: center;
+  margin: auto;
+  border-radius: 2px;
+  border: solid 1px #d6d6d6;
   cursor: pointer;
-  transition: all 0.7s;
-  border-bottom-left-radius: 2rem;
-  border-top-left-radius: 2rem;
+  transition: all 0.5s;
+  width: 19px;
+  height: 28px;
+  font-family: Roboto;
+  font-size: 16px;
+  font-weight: 500;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: 1.75;
+  letter-spacing: normal;
+  text-align: center;
 }
+
 ul.nav li:nth-child(2) {
-  border-radius: 0;
-  border-bottom-right-radius: 2rem;
-  border-top-right-radius: 2rem;
+  border-radius: 2px;
 }
 ul.nav li:hover {
   background: rgba(50, 224, 196, 0.15);
 }
 ul.nav li.active {
-  background: #39a2db;
+  color: #39a2db;
 }
