--- a/src/components/DropDown/DropDown.style.css
+++ b/src/components/DropDown/DropDown.style.css
@@ -4,6 +4,44 @@
   margin: 63px 114px 1px 150px;
   padding: 5px 12px 5px 12px;
   border-radius: 4px;
+  background-color: #fff;
+}
+
+.drop-button {
+  width: 240px;
+  height: 32px;
+  padding: 5px 12px 5px 12px;
+  border-radius: 4px;
   border: solid 1px #2e2e2e;
   background-color: #fff;
+}
+
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f1f1f1;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+  cursor: pointer;
+  padding: 15px 144px 12px 10px;
+  box-shadow: 0 2px 2px 0 #dad8d8;
+  background-color: #fff;
+}
+.down-arrow {
+  width: 20px;
+  height: 7px;
+  float: right;
+}
+
+.dropdown-content a:hover {
+  background-color: rgb(177, 177, 177);
+}
+
+.show {
+  display: block;
+}
+
+.icon-image {
+  width: 20px;
 }
