--- a/src/components/DropDown/DropDown.style.css
+++ b/src/components/DropDown/DropDown.style.css
@@ -1,47 +1,84 @@
-.dropdown {
+* {
+  box-sizing: border-box;
+}
+
+.dropdown-box {
+  position: absolute;
   width: 240px;
   height: 32px;
   margin: 63px 114px 1px 150px;
   padding: 5px 12px 5px 12px;
   border-radius: 4px;
-  background-color: #fff;
-}
-
-.drop-button {
-  width: 240px;
-  height: 32px;
-  padding: 5px 12px 5px 12px;
-  border-radius: 4px;
   border: solid 1px #2e2e2e;
+  font-family: Roboto;
+  font-size: 14px;
+  font-weight: normal;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: 1.57;
+  letter-spacing: normal;
+  color: #343434;
   background-color: #fff;
 }
 
+.dropdown-selected-item {
+  display: inline-block;
+  height: 100%;
+  width: 100%;
+  padding: 4px 12px;
+  vertical-align: middle;
+}
 
-.dropdown-content {
-  display: none;
-  position: absolute;
-  background-color: #f1f1f1;
-  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-  z-index: 1;
+.dropdown-items  {
+  width: 240px;
+  box-shadow: 0 1px 4px 0 rgba(0, 21, 41, 0.12);
+  background-image: linear-gradient(to bottom, #ececec -32%, #fff 124%);
+}
+
+.dropdown-items div {
   cursor: pointer;
-  padding: 15px 144px 12px 10px;
-  box-shadow: 0 2px 2px 0 #dad8d8;
-  background-color: #fff;
-}
-.down-arrow {
-  width: 20px;
-  height: 7px;
-  float: right;
+  padding: 6px;
+  padding-left: 20px;
 }
 
-.dropdown-content a:hover {
-  background-color: rgb(177, 177, 177);
+.dropdown-items div:hover {
+  background-color: #ddd;
 }
 
-.show {
-  display: block;
+.dropdown-arrow {
+  width: 30px;
+  height: 30px;
+  margin: 0;
+  padding: 0;
+  display: inline-block;
+  background: #ffffff;
+  position: absolute;
+  right: 0;
+  top: 0;
+}
+
+.dropdown-arrow-down {
+  position: absolute;
+  top: 10px;
+  left: 10px;
+  width: 0;
+  height: 0;
+  border-left: 8px solid transparent;
+  border-right: 8px solid transparent;
+  border-top: 10px solid red;
+}
+
+.dropdown-arrow-up {
+  position: absolute;
+  top: 10px;
+  left: 10px;
+  width: 0;
+  height: 0;
+  border-left: 8px solid transparent;
+  border-right: 8px solid transparent;
+  border-bottom: 10px solid red;
 }
 
 .icon-image {
-  width: 20px;
+  width: 17px;
 }
