--- a/src/components/Card/Card.style.css
+++ b/src/components/Card/Card.style.css
@@ -1,5 +1,5 @@
 .card {
-  width: 550px;
+  width: 600px;
   height: 90px;
   margin: 18px 40px 30px 150px;
   padding: 0 0 0 26px;
@@ -9,11 +9,37 @@
   background-color: #fff;
   cursor: pointer;
 }
-.card:hover{
+.card-header {
+  width: 500px;
+  height: 13px;
+  margin: 26px 325px 7px 8px;
+  font-family: Roboto;
+  font-size: 11px;
+  font-weight: normal;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: normal;
+  letter-spacing: normal;
+  color: #767676;
+}
+.card-body {
+  width: 440px;
+  height: 20px;
+  margin: 6px 0 0;
+  font-family: Roboto;
+  font-size: 14px;
+  font-weight: bolder;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: 1.43;
+  letter-spacing: 0.25px;
+  color: #6b6b6b;
+}
+.card:hover {
   opacity: 0.5;
 }
-.link-card{
-  text-decoration:none;
+.link-card {
+  text-decoration: none;
   color: black;
 }
 
@@ -22,15 +48,26 @@
   height: 90px;
   margin: 0 0 0 16px;
   padding: 35px 22px 33px;
+  text-align: center;
+
   opacity: 0.06;
   border-radius: 6px;
   border: solid 1px #606060;
   background-color: #606060;
 }
 
-.save-icon {
-  width: 24px;
-  height: 22px;
-  background-color: #e7e3e4;
+.icon-container {
+  width: 68px;
+  height: 90px;
+  margin-top: -70px;
   float: right;
+  border-radius: 6px;
+  background-color: #f7eeee;
+}
+.save-icon {
+  width: 28px;
+  height: 22px;
+  display:block;
+    margin:auto;
+    display: flex;
 }
