--- a/src/components/Pagination/Pagination.style.css
+++ b/src/components/Pagination/Pagination.style.css
@@ -1,3 +1,17 @@
+.pagination{
+  text-align: center;
+  margin: auto;
+}
+
+button {
+  width: 32px;
+  height: 32px;
+  margin: 0 8px 0 0;
+  padding: 9px;
+  border-radius: 6px;
+  border: solid 1px #d9d9d9;
+  background-color: #fff;
+}
 .active-page-number {
   background: rgb(103, 103, 230);
   color: white;
