--- a/src/components/Card/Card.style.css
+++ b/src/components/Card/Card.style.css
@@ -23,11 +23,11 @@
   color: #767676;
 }
 .card-body {
-  width: 440px;
+  width: 100%;
   height: 20px;
   margin: 6px 0 0;
   font-family: Roboto;
-  font-size: 14px;
+  font-size: 15px;
   font-weight: bolder;
   font-stretch: normal;
   font-style: normal;
@@ -44,16 +44,15 @@
 }
 
 .like-container {
-  width: 68px;
+  width: 70%;
   height: 90px;
   margin: 0 0 0 16px;
   padding: 35px 22px 33px;
   text-align: center;
-
   opacity: 0.06;
   border-radius: 6px;
   border: solid 1px #606060;
-  background-color: #606060;
+  background-color: #ffffff;
 }
 
 .icon-container {
@@ -62,7 +61,7 @@
   margin-top: -70px;
   float: right;
   border-radius: 6px;
-  background-color: #f7eeee;
+  background-color: #cecece5b;
 }
 .save-icon {
   width: 28px;
