--- a/src/containers/BoardContainer/Board.style.css
+++ b/src/containers/BoardContainer/Board.style.css
@@ -1,5 +1,5 @@
 .nav-bar {
-  width: 1440px;
+  width: 100%;
   height: 114px;
   margin: 0 0 70px;
   padding: 44px 1082px 42px 150px;
@@ -12,7 +12,7 @@
   height: 28px;
   object-fit: contain;
   font-family: Baskerville;
-  font-size: 28px;
+  font-size: 2vw;
   font-weight: normal;
   font-stretch: normal;
   font-style: normal;
